# final-project-tk_botz

./: .gitignore  Dev.md  README.md
ROS/: agent.md
ROS/TK_botz_workspace/src/raspberrypi/: package.xml  setup.cfg  setup.py
ROS/bots_ws/: dockerfile
ROS/bots_ws/src/: ros-test.html
ROS/botz_workspace/src/kinect_camera/: CMakeLists.txt  package.xml
ROS/botz_workspace/src/kinect_camera/launch/: kinect_rgbd.launch.py
ROS/botz_workspace/src/kinect_camera/src/: kinect_rgbd_node.cpp
ROS/botz_workspace/src/kinect_ros2/launch/: kinect_stream_launch.py
ROS/botz_workspace/src/kobuki_app_bridge/: package.xml  setup.cfg  setup.py
ROS/botz_workspace/src/kobuki_app_bridge/config/: bridge_params.yaml
ROS/botz_workspace/src/kobuki_app_bridge/kobuki_app_bridge/: bridge_node.py  command_router.py  goal_manager.py  map_http_node.py  map_server_bridge.py  rest_api_node.py  state_broadcaster.py  websocket_bridge.py
ROS/botz_workspace/src/kobuki_app_bridge/launch/: app_bridge.launch.py  kobuki_app_bridge.launch.py
ROS/botz_workspace/src/kobuki_driver/: package.xml  setup.cfg  setup.py
ROS/botz_workspace/src/kobuki_driver/config/: ekf_config.yaml  slam_async_config.yaml
ROS/botz_workspace/src/kobuki_driver/kobuki_driver/: kobuki_nav_server.py  kobuki_node.py  kuboki_driver.py  nav_action_server.py
ROS/botz_workspace/src/kobuki_driver/launch/: edge_stack_launch.py  ekf_launch.py  kobuki_ekf_launch.py  robot_stack_launch.py  server_stack_launch.py  slam_launch.py
ROS/botz_workspace/src/kobuki_interfaces/: CMakeLists.txt  package.xml
ROS/botz_workspace/src/kobuki_interfaces/action/: RobotNav.action
ROS/botz_workspace/src/kobuki_interfaces/msg/: RobotNavFeedback.msg  RobotNavGoal.msg
ROS/botz_workspace/src/kobuki_interfaces/src/: __init__.py  kobuki_nav_server.py
ROS/botz_workspace/src/kobuki_interfaces/srv/: RobotNav.srv
ROS/botz_workspace/src/lidar_driver/: package.xml  setup.py
ROS/botz_workspace/src/lidar_driver/launch/: lidar_launch.py
ROS/botz_workspace/src/lidar_driver/lidar_driver/: lidar_driver.py  lidar_node.py
ROS/botz_workspace/src/nav2_coordinator/: package.xml  setup.cfg  setup.py
ROS/botz_workspace/src/nav2_coordinator/launch/: nav_coordinator_launch.py
ROS/botz_workspace/src/nav2_coordinator/nav2_coordinator/: nav2_coordinator_node.py
ROS/botz_workspace/src/nav_coordinator_interfaces/: CMakeLists.txt  package.xml
ROS/botz_workspace/src/nav_coordinator_interfaces/srv/: NavigateToCoordinate.srv
app_interface/: bun.lockb  package-lock.json  package.json  tailwind.config.ts
app_interface/ros-web-app/: package-lock.json  package.json
app_interface/ros-web-app/src/: App.css  App.js
app_interface/src/: index.css
app_interface/src/components/dashboard/: CameraPanel.tsx  ControlPanel.tsx  MapPanel.tsx  PanelHeader.tsx  StatusPanel.tsx  TopBar.tsx
app_interface/src/hooks/: useROS.ts
app_interface/src/pages/: Index.tsx
